--- a/globals.css
+++ b/globals.css
@@ -2,7 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
-/* estilos globais extras */
+/* Estilos globais opcionais */
+html,
 body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
   font-family: sans-serif;
+  background-color: #f9fafb; /* cor clara de fundo */
+  color: #111827; /* texto escuro */
 }
