--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* Estilos globais opcionais */
+html,
+body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
+  background-color: #f9fafb;
+  color: #111827;
+}
